# mcp-md

./: .env  .gitignore  README.md  pyproject.toml
mcp_servers/: markdown_server.py  servers_config.json
src/: __init__.py  main.py
src/mcp_chatbot/: __init__.py
src/mcp_chatbot/chat/: __init__.py  session.py
src/mcp_chatbot/config/: __init__.py  configuration.py
src/mcp_chatbot/llm/: __init__.py  ollama.py  siliconflow.py
src/mcp_chatbot/mcp/: __init__.py  client.py  mcp_tool.py
